--- a/src/App.css
+++ b/src/App.css
@@ -83,8 +83,8 @@
   font-size: x-large;
   width: 100%;
   height: 100%;
-  padding-left: 40px;
-  padding-right: 30px;
+  padding-left: 50px;
+  padding-right: 40px;
   display: inline-block;
 }
 .letter {
@@ -220,7 +220,12 @@ button:active {
     margin-top: 20px;
   }
   .App {
-    width: 90vw;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    justify-self: center;
+    justify-content: center;
+    background-size: cover;
   }
   button {
     font-size: medium;
@@ -232,33 +237,26 @@ button:active {
   }
 }
 @media screen and (max-width: 620px) {
+  .App {
+    font-size: smaller;
+  }
+
+  .level-over {
+    padding-left: 40px;
+    padding-right: 20px;
+  }
   #hangman {
     margin-top: 0;
     height: 250px;
     max-width: 200px;
   }
-  #letters,
-  #solution,
-  #score {
-    font-size: small;
-  }
-}
-@media screen and (max-width: 470px) {
-  #letters,
-  #solution,
-  #score {
-    font-size: x-small;
-  }
-  #hangman {
-    height: 180px;
-    max-width: 150px;
-    margin-left: 100px;
+  #letters {
+    padding-left: 100px;
   }
 }
 
-@media screen and (max-width: 370px) {
+@media screen and (max-width: 470px) {
   #hangman {
-    height: 110px;
-    max-width: 90px;
+    margin-left: 70px;
   }
 }
